salesforce_sfdx_QA/main/default/objects/Partner_Program_Relationship__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Program Relationships</relationshipLabel>
    <relationshipName>Partner_Program_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>