salesforce_sfdx_QA/main/default/objects/Partner_Program_Relationship__c/fields/Associated_Partner_Contract__c.field-meta.xml
<CustomField>
    <fullName>Associated_Partner_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Partner Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Partner Program Relationships</relationshipLabel>
    <relationshipName>Partner_Program_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>