salesforce_sfdx_QA/main/default/objects/Partner_Program_Relationship__c/fields/Energy_Efficiency_Program__c.field-meta.xml
<CustomField>
    <fullName>Energy_Efficiency_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Energy Efficiency Program</label>
    <referenceTo>Energy_Efficiency_Program__c</referenceTo>
    <relationshipLabel>Partner Program Relationships</relationshipLabel>
    <relationshipName>Partner_Program_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>